# RecIS

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  README_zh.md  conftest.py  generate_version_info.py  pyproject.toml  requirements.txt  version.py
.github/workflows/: pages.yml  release.yml
code_style/: code_format.sh
csrc/: CMakeLists.txt  bind.cc
csrc/c_api/: CMakeLists.txt
csrc/c_api/fslib/: CMakeLists.txt  c_api.cc  c_api.h
csrc/cuda/: atomic_fast.cuh  cuda_param.cuh  element_wise_kernel.cuh  packer.cuh  utils.cuh
csrc/embedding/: adam.h  adamw.h  adamw_tf.h  children_info.h  cpu_id_map.h  gpu_id_map.h  hashtable.h  id_allocator.h  id_map.h  initializer.h  optim.h  parallel_util.h  slice_info.h  slot_group.h
csrc/ops/: adam_tf_op.h  block_apply_adamw_op.h  block_ops.h  bucketize_op.h  calc_ragged_index.h  dense_to_ragged.h  embedding_segment_reduce.h  feature_cross_ragged.cc  feature_cross_ragged.h  feature_cross_ragged_kernel.cu  fused_bucketized.h  fused_hash.h  fused_ragged_cutoff.cc  fused_ragged_cutoff.h  fused_ragged_cutoff_kernel.cu  fused_uint64_mod.h  gauc.h  hashtable_ops.h  ids_encode.h  ids_partition.cc  ids_partition.h  multi_hash.h  ragged_common.cuh  ragged_tile.h  ragged_to_dense.cc  (+6 more)
docker/: Dockerfile.torch240  Dockerfile.torch251  Dockerfile.torch260
docs/: README.md  conf.py  faq.rst  faq_en.rst  index.rst  index_zh.rst  installation.rst  installation_en.rst  introduction.rst  introduction_en.rst  quickstart.rst  quickstart_en.rst  requirements.txt
tools/: csv_to_orc.py  odps_to_orc.py  requirements_tools.txt
(+122 files in other folders)
